--- a/server/package.json
+++ b/server/package.json
@@ -49,6 +49,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@aws-sdk/client-s3": "^3.980.0",
     "@types/bcrypt": "^6.0.0",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
@@ -56,6 +57,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer-s3": "^3.0.3",
     "@types/node": "^24.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
@@ -64,6 +66,7 @@
     "@types/uuid": "^11.0.0",
     "copyfiles": "^2.4.1",
     "jest": "^30.2.0",
+    "multer-s3": "^3.0.1",
     "supertest": "^7.1.4",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
