feat: Add Docker and Docker Compose configurations for client and server applications.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -2,15 +2,15 @@
 FROM node:20-alpine AS base
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
-COPY . .
+RUN npm install --legacy-peer-deps
 
 # Development stage
 FROM base AS dev
-RUN npm install -g nodemon ts-node typescript
+COPY . .
 CMD ["npm", "run", "dev"]
 
 # Production stage
 FROM base AS prod
+COPY . .
 RUN npm run build
 CMD ["npm", "start"]
