--- a/server/package.json
+++ b/server/package.json
@@ -61,9 +61,11 @@
     "@types/node": "^24.10.1",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth20": "^2.0.17",
+    "@types/react": "^19.2.10",
     "@types/supertest": "^6.0.3",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/uuid": "^11.0.0",
+    "@types/ws": "^8.18.1",
     "copyfiles": "^2.4.1",
     "jest": "^30.2.0",
     "multer-s3": "^3.0.1",
