--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,5 +12,10 @@ CMD ["npm", "run", "dev"]
 # Production stage
 FROM base AS prod
 COPY . .
+ARG NEXT_PUBLIC_GOOGLE_CLIENT_ID
+ENV NEXT_PUBLIC_GOOGLE_CLIENT_ID=$NEXT_PUBLIC_GOOGLE_CLIENT_ID
+
+ARG NEXT_PUBLIC_BASE_URL
+ENV NEXT_PUBLIC_BASE_URL=$NEXT_PUBLIC_BASE_URL
 RUN npm run build
 CMD ["npm", "start"]
